Closed
Bug 39180
Opened 26 years ago
Closed 25 years ago
Don't autocomplete when no exact match
Categories
(MailNews Core :: Composition, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M16
People
(Reporter: bugzilla, Assigned: bugzilla)
Details
(Keywords: platform-parity)
Per Phil comment on the newsgroup, we should not autocomplete the user input when we don't hava an exact match
but just display the popup menu with the search result.
Open issue: What should we do if the user press return without having selecting a result?
| Assignee | ||
Comment 1•26 years ago
|
||
implementation comment: I need to rebuilt the counter of matches when parsing the prevResult.
| Assignee | ||
Comment 2•26 years ago
|
||
Fix in hand.
The new rule is (will be whne I check it in) that if we have more that one exact match or we have no exact match
but more than one partial match, we don't auto complete the user input, we just display the popup menu will all the
matches.
Status: NEW → ASSIGNED
Target Milestone: --- → M16
| Assignee | ||
Comment 3•26 years ago
|
||
Fixed and checked in.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Comment 4•26 years ago
|
||
Thanks JF! :-)
| Assignee | ||
Comment 5•26 years ago
|
||
no problem. Also, I have turned on the popup menu :-)
When we display matches in a drop down list (following the rule mentioned above)
shouldn't we do auto complete with what the user selects from the list.
Currently this isn't happening.
For (2) exact matches, I get the list with both matches, but when I select one
from the list it doesn't autocomplete. (My exact match was on the nicknames,
but the email addresses were different)
For no exact match but more than (2) parallel matches I get the same result as
the exact matches.
Why give a list if we can't chose from it.
Waiting for more clarification on the expected results for this fix.
ducarroz is on vacation - you may want to ask jennifer on the expected behavior.
If there is one exact match, should autocomplete on the match. Don't show the
popup menu list.
If there is more that one exact match or no exact match but more than one
partial match, don't auto complete from the user input and display the popup
menu will all the matches. Once the user makes a selection from the popup menu,
autocomplete on that item.
Users should be able to select an item in the popup menu by using the mouse or
using the keyboard up and down arrows to navigate the list. Use "Enter" to
accept a listed menu item.
If the user hits "Enter" on the keyboard without a match, we should accept what
they have typed and add the default domain info (like 4.x does).
Windows only bug now for the remaining part of bug:
This functionality is NOT fixed: " Users should be able to select an item in the
popup menu by using the mouse.."
But is fixed for this part: "or using the keyboard up and down arrows to
navigate the list. Use "Enter to accept a listed menu item. menu, autocomplete
on that item."
Reopening and reassigning to putterman for a complete fix, the workaround is of
using the arrow keys is not obvious.
Status: RESOLVED → REOPENED
Keywords: pp
OS: Mac System 8.5 → Windows 98
Hardware: Macintosh → PC
Resolution: FIXED → ---
Comment 10•26 years ago
|
||
reassignin to putterman for review
Assignee: ducarroz → putterman
Status: REOPENED → NEW
Comment 11•26 years ago
|
||
Scott, is bug 38461 covering this mouse selecting not working for the Auto
complete popup menu? If so, resolve as fixed again and I will verify this one.
Comment 12•26 years ago
|
||
Also, the drop down menu should appear Directly below the addressing field (not
off to the side like it currently is).
And when using the arrows to move up/down in the list, the current selection
in the list should be highlighted.
Comment 13•26 years ago
|
||
we should open up separate bugs for all of these. There are more bugs in here
than just "Don't autocomplete when no exact match" and then we should decide
which need to have nsbeta2 added to it.
I agree with what jglick said about when we should autocomplete.
Is this bug fixed as to when we should autocomplete? If it is we should mark
this fixed and open up new bugs.
It sounds like 38461 might be covering this, but I'm not sure.
Comment 14•26 years ago
|
||
ok, here are the bugs I see in this bug report.
1. The original
2. Exact match shouldn't bring up popup (bug 40168)
3. Mouse can't be used to select popup item (bug 38461)
4. Drop down should occur below addressing widget, not to the side
5. Arrow keys should work in popup
6. Default domain needs to be added when no exact match (do we have a bug for
this?)
Comment 15•26 years ago
|
||
#4 is 40522
#5 is 40523
Can we mark this as fixed?
Comment 16•25 years ago
|
||
reassigning to ducarroz. Jean-Francois, given that the other bugs exist, can
this bug be marked as fixed?
Assignee: putterman → ducarroz
Comment 17•25 years ago
|
||
M16 has been out for a while now, these bugs target milestones need to be
updated.
| Assignee | ||
Comment 18•25 years ago
|
||
oops, forget to close this bug!
Status: NEW → RESOLVED
Closed: 26 years ago → 25 years ago
Resolution: --- → FIXED
Comment 19•25 years ago
|
||
Using build 2000-06-23 on win98, mac and linux and the original scenario. This
is fixed. Also, fixed is the 1st reason this was reopened as stated in comment
on 5-23-00 @ 16:58 about selecting a name from the match list should
autocomplete with the selected name. This is now fixed too. I will verify.
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•