Fix for bug 39180. Don't autocomplete when we have more than one exact match or more than one partial match. Just display the list of matches.